Jaro-Winkler search + introduce UserSearchService